--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -32,77 +32,84 @@
           JARVIS_TZ: 'Asia/Kolkata'
           JARVIS_CERT_RESOLVER: 'letsencrypt'
           JARVIS_COMMUNITY_SCRIPTS_URL: 'https://raw.githubusercontent.com/community-scripts/ProxmoxVE/main'
+          JARVIS_ICON_CDN: 'https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/'
           JARVIS_SERVICES:
               homer:
                   id: 253
                   name: Homer
                   subtitle: Dashboard
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/homer.png
+                  logo: homer.png
                   port: 8010
                   root_domain: true
               jellyfin:
                   id: 248
                   name: Jellyfin
                   subtitle: Media Server
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/jellyfin.png
+                  logo: jellyfin.png
                   port: 8096
                   subdomains: [media, jellyfin]
+
               qbittorrent:
                   id: 249
                   name: qBittorrent
                   subtitle: Torrent Client
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/qbittorrent.png
+                  logo: qbittorrent.png
                   port: 80
                   subdomains: [torrent]
+
               home:
                   id: 250
                   name: Home Assistant
                   subtitle: Smart Home Automation
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/home-assistant.png
+                  logo: home-assistant.png
                   port: 8123
                   subdomains: [home]
+
               pihole:
                   id: 252
                   name: Pihole
                   subtitle: Network DNS & Ad Blocker
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/pi-hole.png
+                  logo: pi-hole.png
                   port: 80
                   path: /admin
                   subdomains: [dns]
                   middlewares: [pihole-redirect]
+
               docker:
                   id: 253
                   name: Docker
                   subtitle: Container Platform
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/docker.png
+                  logo: docker.png
                   port: 2375
+
               traefik:
                   id: 254
                   name: Traefik
                   subtitle: Reverse Proxy
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/traefik.png
+                  logo: traefik.png
                   port: 8080
                   subdomains: [proxy]
                   is_internal: true
+
               backrest:
                   id: 253
                   name: Backrest
                   subtitle: Backup Manager
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/backrest.png
+                  logo: backrest.png
                   port: 9898
                   subdomains: [backup]
               code:
                   id: 253
                   name: VS Code
                   subtitle: Code Server
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/vscode.png
+                  logo: vscode.png
                   port: 8888
                   subdomains: [code]
               proxmox:
                   id: 200
                   name: Proxmox
                   subtitle: Virtualization Platform
-                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/proxmox.png
+                  logo: proxmox.png
                   port: 8006
                   https: true
                   subdomains: [pm]
