--- a/Proxmox/tasks/env.yml
+++ b/Proxmox/tasks/env.yml
@@ -12,7 +12,6 @@
           - JARVIS_AUTH_GOOGLE_APP_PASSWORD
           - JARVIS_AUTH_GOOGLE_CLIENT_ID
           - JARVIS_AUTH_GOOGLE_CLIENT_SECRET
-          - JARVIS_AUTH_SESSION_KEY
           - JARVIS_AUTH_X_CLIENT_ID
           - JARVIS_AUTH_X_CLIENT_SECRET
           - JARVIS_CF_DNS_API_TOKEN
@@ -22,6 +21,7 @@
           - JARVIS_DOMAIN
           - JARVIS_GITHUB_TOKEN_SSH
           - JARVIS_POSTGRES_PASSWORD
+          - JARVIS_AUTH_STORAGE_KEY
       local_config:
           JARVIS_DIR: '/root/.jarvis'
           JARVIS_CONFIGS_DIR: '/root/.jarvis/configs'
@@ -34,6 +34,23 @@
           JARVIS_COMMUNITY_SCRIPTS_URL: 'https://raw.githubusercontent.com/community-scripts/ProxmoxVE/main'
           JARVIS_ICON_CDN: 'https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/'
           JARVIS_SERVICES:
+              auth:
+                  id: 253
+                  name: Auth
+                  subtitle: SSO Authentication
+                  logo: voidauth.png
+                  port: 3030
+                  subdomains: [auth]
+                  skip_auth: true
+
+              postgres:
+                  id: 253
+                  name: PostgreSQL
+                  subtitle: Database Server
+                  logo: postgres.png
+                  port: 5432
+                  hidden: true
+
               homer:
                   id: 253
                   name: Homer
@@ -41,6 +58,9 @@
                   logo: homer.png
                   port: 8010
                   root_domain: true
+                  skip_auth: true
+                  hidden: true
+
               jellyfin:
                   id: 248
                   name: Jellyfin
@@ -81,6 +101,7 @@
                   subtitle: Container Platform
                   logo: docker.png
                   port: 2375
+                  hidden: true
 
               traefik:
                   id: 254
@@ -98,6 +119,7 @@
                   logo: backrest.png
                   port: 9898
                   subdomains: [backup]
+
               code:
                   id: 253
                   name: VS Code
@@ -105,6 +127,7 @@
                   logo: vscode.png
                   port: 8888
                   subdomains: [code]
+
               proxmox:
                   id: 200
                   name: Proxmox
