--- a/Proxmox/tasks/docker/backrest.yml
+++ b/Proxmox/tasks/docker/backrest.yml
@@ -18,16 +18,6 @@
             - '{{ path.data }}'
             - '{{ path.config }}'
 
-      - name: '{{ app_name | upper }}: Generate Bcrypt Hash'
-        command: >
-            {{ ansible_playbook_python }} -c 'import bcrypt; import base64; import os; password = os.environ["PASS"].encode("utf-8"); salt = bcrypt.gensalt(rounds=10); hashed = bcrypt.hashpw(password, salt); print(base64.b64encode(hashed).decode("utf-8"));'
-        environment:
-            PASS: '{{ env.JARVIS_ADMIN_PASSWORD }}'
-        delegate_to: localhost
-        register: admin_password_hash
-        changed_when: false
-        become: false
-
       - name: '{{ app_name | upper }}: Create config.json'
         copy:
             dest: '{{ path.config }}/config.json'
@@ -39,7 +29,7 @@
                     "users": [
                       {
                         "name": "{{ env.JARVIS_ADMIN_USERNAME }}",
-                        "passwordBcrypt": "{{ admin_password_hash.stdout | trim }}"
+                        "passwordBcrypt": "{{ env.JARVIS_ADMIN_PASSWORD_BCRYPT }}"
                       }
                     ]
                   },
