--- a/Proxmox/tasks/docker/homer.yml
+++ b/Proxmox/tasks/docker/homer.yml
@@ -76,7 +76,7 @@
                         - name: "Services"
                           icon: "fas fa-server"
                           items:
-                      {% for k,s in env.JARVIS_SERVICES.items() if k not in ['homer', 'docker'] %}
+                      {% for k,s in env.JARVIS_SERVICES.items() if not s.hidden|default(false) %}
                       {% set protocol = 'https' if s.https|default(false) else 'http' %}
                       {% set portSuffix = '' if (s.port==80 and protocol=='http') or (s.port==443 and protocol=='https') else ':'+s.port|string %}
                             - name: "{{ s.name }}"
